<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kesteli.filip.projektproba.MainActivity"
    tools:showIn="@layout/moj_ui2">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/muses_spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/refresh"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/refresh" />

                <Button
                    android:id="@+id/connect"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/disconnect"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:text="@string/disconnect" />

                <Button
                    android:id="@+id/pause"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/pause" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/con_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/undefined"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="16sp" />

            <EditText
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="Question 1"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smileyRating1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvToday" />

            <TextView
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:hint="Question 2"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smileyRating2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvToday" />

            <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:hint="Question 3"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smileyRating3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvToday" />

            <TextView
                android:id="@+id/q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:hint="Question 4"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smileyRating4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvToday" />

            <TextView
                android:id="@+id/q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWelcome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:hint="Question 5"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smileyRating5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvToday" />

            <Button
                android:id="@+id/btnNewCase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Finish case" />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="45dp"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eeg_tp9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eeg_af7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eeg_af8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eeg_tp10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/acc_x"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/acc_y"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/acc_z"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/elem1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/elem2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/elem3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/elem4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.NestedScrollView>